--- a/dockercomposes/emane-net.yml
+++ b/dockercomposes/emane-net.yml
@@ -7,12 +7,14 @@ services:
             context: ../
             dockerfile: dockerfiles/emane-environment
         networks:
-            - the_network
+            a_ota:
+                ipv4_address: 10.100.0.2
         container_name: emane-service1
         volumes:
-            - /home/user2/work/idf/emane/emane-tutorial/0:/0
+            - /home/user2/work/idf/emane/emane-tutorial/:/emane-tutorial
         tty: true
         stdin_open: true
+        privileged: true
         entrypoint: /bin/bash
 
     emane-service-2:
@@ -21,15 +23,20 @@ services:
             context: ../
             dockerfile: dockerfiles/emane-environment
         networks:
-            - the_network
+            a_ota:
+                ipv4_address: 10.100.0.3
         container_name: emane-service2
         volumes:
-            - /home/user2/work/idf/emane/emane-tutorial/0:/0
+            - /home/user2/work/idf/emane/emane-tutorial/:/emane-tutorial
         tty: true
         stdin_open: true
+        privileged: true
         entrypoint: /bin/bash
 
 networks:
-    the_network:
-        name: the_network
+    a_ota:
         driver: bridge
+        ipam:
+            driver: default
+            config:
+                - subnet: 10.100.0.0/24
