--- a/dockercomposes/emane-net.yml
+++ b/dockercomposes/emane-net.yml
@@ -7,11 +7,12 @@ services:
             context: ../
             dockerfile: dockerfiles/emane-environment
         networks:
-            a_ota:
-                ipv4_address: 10.100.0.2
+            - a_ota
         container_name: emane-service1
         volumes:
             - /home/user2/work/idf/emane/emane-tutorial/:/emane-tutorial
+        environment:
+            - NODE_NO=1
         tty: true
         stdin_open: true
         privileged: true
@@ -23,9 +24,25 @@ services:
             context: ../
             dockerfile: dockerfiles/emane-environment
         networks:
-            a_ota:
-                ipv4_address: 10.100.0.3
+            - a_ota
         container_name: emane-service2
+        volumes:
+            - /home/user2/work/idf/emane/emane-tutorial/:/emane-tutorial
+        environment:
+            - NODE_NO=2
+        tty: true
+        stdin_open: true
+        privileged: true
+        entrypoint: /bin/bash
+
+    helper-service:
+        #image: ubuntu:18.04
+        build:
+            context: ../
+            dockerfile: dockerfiles/emane-environment
+        networks:
+            - a_ota
+        container_name: helper-service
         volumes:
             - /home/user2/work/idf/emane/emane-tutorial/:/emane-tutorial
         tty: true
