starting demo1 by their tutorial

--- a/dockercomposes/emane-net-demo1.yml
+++ b/dockercomposes/emane-net-demo1.yml
@@ -8,7 +8,7 @@ services:
             dockerfile: dockerfiles/emane-environment
         networks:
             a_ota:
-                ipv4_address: 10.101.0.2
+                ipv4_address: 10.200.0.2
         container_name: emane-service1
         volumes:
             - /home/user2/work/idf/emane/emane-tutorial/:/emane-tutorial
@@ -26,7 +26,7 @@ services:
             dockerfile: dockerfiles/emane-environment
         networks:
             a_ota:
-                ipv4_address: 10.101.0.3
+                ipv4_address: 10.200.0.3
         container_name: emane-service2
         volumes:
             - /home/user2/work/idf/emane/emane-tutorial/:/emane-tutorial
@@ -44,7 +44,7 @@ services:
             dockerfile: dockerfiles/emane-environment
         networks:
             a_ota:
-                ipv4_address: 10.101.0.4
+                ipv4_address: 10.200.0.4
         container_name: emane-service3
         volumes:
             - /home/user2/work/idf/emane/emane-tutorial/:/emane-tutorial
@@ -53,7 +53,7 @@ services:
         tty: true
         stdin_open: true
         privileged: true
-        entrypoint:  /bin/sh /emane-tutorial/1/start-demo.sh
+        entrypoint:  /bin/bash /emane-tutorial/1/start-demo.sh
 
     emane-service-4:
         #image: ubuntu:18.04
@@ -62,7 +62,7 @@ services:
             dockerfile: dockerfiles/emane-environment
         networks:
             a_ota:
-                ipv4_address: 10.101.0.5
+                ipv4_address: 10.200.0.5
         container_name: emane-service4
         volumes:
             - /home/user2/work/idf/emane/emane-tutorial/:/emane-tutorial
@@ -71,7 +71,7 @@ services:
         tty: true
         stdin_open: true
         privileged: true
-        entrypoint:  /bin/sh /emane-tutorial/1/start-demo.sh
+        entrypoint:  /bin/bash /emane-tutorial/1/start-demo.sh
 
     emane-service-5:
         #image: ubuntu:18.04
@@ -80,7 +80,7 @@ services:
             dockerfile: dockerfiles/emane-environment
         networks:
             a_ota:
-                ipv4_address: 10.101.0.6
+                ipv4_address: 10.200.0.6
         container_name: emane-service5
         volumes:
             - /home/user2/work/idf/emane/emane-tutorial/:/emane-tutorial
@@ -99,7 +99,7 @@ services:
             dockerfile: dockerfiles/emane-environment
         networks:
             a_ota:
-                ipv4_address: 10.101.0.7
+                ipv4_address: 10.200.0.7
         container_name: emane-service6
         volumes:
             - /home/user2/work/idf/emane/emane-tutorial/:/emane-tutorial
@@ -117,7 +117,7 @@ services:
             dockerfile: dockerfiles/emane-environment
         networks:
             a_ota:
-                ipv4_address: 10.101.0.8
+                ipv4_address: 10.200.0.8
         container_name: emane-service7
         volumes:
             - /home/user2/work/idf/emane/emane-tutorial/:/emane-tutorial
@@ -135,7 +135,7 @@ services:
             dockerfile: dockerfiles/emane-environment
         networks:
             a_ota:
-                ipv4_address: 10.101.0.9
+                ipv4_address: 10.200.0.9
         container_name: emane-service8
         volumes:
             - /home/user2/work/idf/emane/emane-tutorial/:/emane-tutorial
@@ -153,7 +153,7 @@ services:
             dockerfile: dockerfiles/emane-environment
         networks:
             a_ota:
-                ipv4_address: 10.101.0.10
+                ipv4_address: 10.200.0.10
         container_name: emane-service9
         volumes:
             - /home/user2/work/idf/emane/emane-tutorial/:/emane-tutorial
@@ -171,7 +171,7 @@ services:
             dockerfile: dockerfiles/emane-environment
         networks:
             a_ota:
-                ipv4_address: 10.101.0.11
+                ipv4_address: 10.200.0.11
         container_name: emane-service10
         volumes:
             - /home/user2/work/idf/emane/emane-tutorial/:/emane-tutorial
@@ -189,7 +189,7 @@ services:
             dockerfile: dockerfiles/emane-environment
         networks:
             a_ota:
-                ipv4_address: 10.101.0.12
+                ipv4_address: 10.200.0.12
         container_name: helper-service
         volumes:
             - /home/user2/work/idf/emane/emane-tutorial/:/emane-tutorial
@@ -204,4 +204,4 @@ networks:
         ipam:
             driver: default
             config:
-                - subnet: 10.101.0.0/24
+                - subnet: 10.200.0.0/24
