--- a/dockercomposes/emane-net-demo8.yml
+++ b/dockercomposes/emane-net-demo8.yml
@@ -17,7 +17,7 @@ services:
         tty: true
         stdin_open: true
         privileged: true
-        entrypoint:  /bin/sh /emane-tutorial/8/start-demo.sh
+        entrypoint:  /bin/sh /emane-tutorial/8/init-node.sh
 
     emane-service-2:
         #image: ubuntu:18.04
@@ -35,7 +35,7 @@ services:
         tty: true
         stdin_open: true
         privileged: true
-        entrypoint:  /bin/sh /emane-tutorial/8/start-demo.sh
+        entrypoint:  /bin/sh /emane-tutorial/8/init-node.sh
 
     emane-service-3:
         #image: ubuntu:18.04
@@ -53,7 +53,7 @@ services:
         tty: true
         stdin_open: true
         privileged: true
-        entrypoint:  /bin/bash /emane-tutorial/8/start-demo.sh
+        entrypoint:  /bin/bash /emane-tutorial/8/init-node.sh
 
     emane-service-4:
         #image: ubuntu:18.04
@@ -71,7 +71,7 @@ services:
         tty: true
         stdin_open: true
         privileged: true
-        entrypoint:  /bin/bash /emane-tutorial/8/start-demo.sh
+        entrypoint:  /bin/bash /emane-tutorial/8/init-node.sh
 
     emane-service-5:
         #image: ubuntu:18.04
@@ -89,7 +89,7 @@ services:
         tty: true
         stdin_open: true
         privileged: true
-        entrypoint:  /bin/sh /emane-tutorial/8/start-demo.sh
+        entrypoint:  /bin/sh /emane-tutorial/8/init-node.sh
 
 
     emane-service-6:
@@ -108,7 +108,7 @@ services:
         tty: true
         stdin_open: true
         privileged: true
-        entrypoint:  /bin/sh /emane-tutorial/8/start-demo.sh
+        entrypoint:  /bin/sh /emane-tutorial/8/init-node.sh
 
     emane-service-7:
         #image: ubuntu:18.04
@@ -126,7 +126,7 @@ services:
         tty: true
         stdin_open: true
         privileged: true
-        entrypoint:  /bin/sh /emane-tutorial/8/start-demo.sh
+        entrypoint:  /bin/sh /emane-tutorial/8/init-node.sh
 
     emane-service-8:
         #image: ubuntu:18.04
@@ -144,7 +144,7 @@ services:
         tty: true
         stdin_open: true
         privileged: true
-        entrypoint:  /bin/sh /emane-tutorial/8/start-demo.sh
+        entrypoint:  /bin/sh /emane-tutorial/8/init-node.sh
 
     emane-service-9:
         #image: ubuntu:18.04
@@ -162,7 +162,7 @@ services:
         tty: true
         stdin_open: true
         privileged: true
-        entrypoint:  /bin/sh /emane-tutorial/8/start-demo.sh
+        entrypoint:  /bin/sh /emane-tutorial/8/init-node.sh
 
     emane-service-10:
         #image: ubuntu:18.04
@@ -180,7 +180,7 @@ services:
         tty: true
         stdin_open: true
         privileged: true
-        entrypoint:  /bin/sh /emane-tutorial/8/start-demo.sh
+        entrypoint:  /bin/sh /emane-tutorial/8/init-node.sh
 
     helper-service:
         #image: ubuntu:18.04
@@ -202,6 +202,20 @@ services:
         #                         persist/helper/var/log/emaneeventservice.log \
         #                         persist/helper/var/run/emaneeventservice.pid \
         #                         persist/helper/var/run/emaneeventservice.uuid 
+
+        # nohup mgen             \
+        #       input $mgeninput   \
+        #       output $mgenoutput \
+        #       $startoption       \
+        #       txlog &> $logfile &
+        # echo $! > $pidfile
+        
+        # start_mgen \
+        #       mgen \
+        #       $PWD/persist/$NODE_NO/var/log/mgen.out \
+        #       $PWD/persist/$NODE_NO/var/run/mgen.pid \
+        #       $PWD/persist/$NODE_NO/var/log/mgen.log \
+        #       "$starttime"
 
 networks:
     a_ota:
