--- a/dockercomposes/emane-net-demo8.yml
+++ b/dockercomposes/emane-net-demo8.yml
@@ -5,7 +5,7 @@ services:
         #image: ubuntu:18.04
         build:
             context: ../
-            dockerfile: dockerfiles/emane-environment
+            dockerfile: dockerfiles/emane-environment.Dockerfile
         networks:
             a_ota:
                 ipv4_address: 10.101.0.2
@@ -23,7 +23,7 @@ services:
         #image: ubuntu:18.04
         build:
             context: ../
-            dockerfile: dockerfiles/emane-environment
+            dockerfile: dockerfiles/emane-environment.Dockerfile
         networks:
             a_ota:
                 ipv4_address: 10.101.0.3
@@ -41,7 +41,7 @@ services:
         #image: ubuntu:18.04
         build:
             context: ../
-            dockerfile: dockerfiles/emane-environment
+            dockerfile: dockerfiles/emane-environment.Dockerfile
         networks:
             a_ota:
                 ipv4_address: 10.101.0.4
@@ -59,7 +59,7 @@ services:
         #image: ubuntu:18.04
         build:
             context: ../
-            dockerfile: dockerfiles/emane-environment
+            dockerfile: dockerfiles/emane-environment.Dockerfile
         networks:
             a_ota:
                 ipv4_address: 10.101.0.5
@@ -77,7 +77,7 @@ services:
         #image: ubuntu:18.04
         build:
             context: ../
-            dockerfile: dockerfiles/emane-environment
+            dockerfile: dockerfiles/emane-environment.Dockerfile
         networks:
             a_ota:
                 ipv4_address: 10.101.0.6
@@ -96,7 +96,7 @@ services:
         #image: ubuntu:18.04
         build:
             context: ../
-            dockerfile: dockerfiles/emane-environment
+            dockerfile: dockerfiles/emane-environment.Dockerfile
         networks:
             a_ota:
                 ipv4_address: 10.101.0.7
@@ -114,7 +114,7 @@ services:
         #image: ubuntu:18.04
         build:
             context: ../
-            dockerfile: dockerfiles/emane-environment
+            dockerfile: dockerfiles/emane-environment.Dockerfile
         networks:
             a_ota:
                 ipv4_address: 10.101.0.8
@@ -132,7 +132,7 @@ services:
         #image: ubuntu:18.04
         build:
             context: ../
-            dockerfile: dockerfiles/emane-environment
+            dockerfile: dockerfiles/emane-environment.Dockerfile
         networks:
             a_ota:
                 ipv4_address: 10.101.0.9
@@ -150,7 +150,7 @@ services:
         #image: ubuntu:18.04
         build:
             context: ../
-            dockerfile: dockerfiles/emane-environment
+            dockerfile: dockerfiles/emane-environment.Dockerfile
         networks:
             a_ota:
                 ipv4_address: 10.101.0.10
@@ -168,7 +168,7 @@ services:
         #image: ubuntu:18.04
         build:
             context: ../
-            dockerfile: dockerfiles/emane-environment
+            dockerfile: dockerfiles/emane-environment.Dockerfile
         networks:
             a_ota:
                 ipv4_address: 10.101.0.11
@@ -186,7 +186,7 @@ services:
         #image: ubuntu:18.04
         build:
             context: ../
-            dockerfile: dockerfiles/emane-environment
+            dockerfile: dockerfiles/emane-environment.Dockerfile
         networks:
             a_ota:
                 ipv4_address: 10.101.0.12
